scrollbar fixed as well as layout

--- a/src/static/details.css
+++ b/src/static/details.css
@@ -1,34 +1,49 @@
+.full-page-overlay {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+}
+
+.full-page-overlay::before {
+    content: '';
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, .3);
+    z-index: -1;
+}
+
+.details-container {
+    position: relative;
+    max-height: 800px;
+    overflow-y: auto; 
+}
+
+.details-container::-webkit-scrollbar {
+    width: 5px;
+}
+
+.details-container::-webkit-scrollbar-track {
+    background: #ffffff1e;
+}
+
+.details-container::-webkit-scrollbar-thumb {
+    background-color: #5543ca;
+    border-radius: 6px;
+}
+
 
 .details-col {
-    padding: 50px 50px 50px 50px;
+    padding: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     width: 100%;
-    color: #f3f3f3;    
+    color: #f3f3f3;
 }
-
-.details-container {
-    overflow-y: scroll;
-    scrollbar-width: thin;
-    scrollbar-color: #5543ca #1c1c1c;
-    max-height: 800px;
-    background-color: transparent;  
-}
-
-.percentage-indicator {
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
-    font-size: 20px;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: #fff;
-    padding: 8px 16px;
-    border-radius: 8px;
-}
-
-
 .btn-blogs {
     margin-top: 50px;
     background-color: #5543ca;
@@ -104,10 +119,13 @@
 
 
 @media (max-width: 991px) {
+    .full-page-overlay {
+        margin-top: -35px;
+    }
     .details-col  {
         font-size: 15px;
-        margin-top: 50px;
      }
+
     .details-col .lead {
        font-size: 14px;
        text-align: justify;
